--- a/.github/workflows/reactci.yml
+++ b/.github/workflows/reactci.yml
@@ -1,3 +1,5 @@
+name: React CI
+
 on:
   push:
     branches: [main]
@@ -6,11 +8,12 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{matrix.os}}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node-version: [18, 19, 20]
+        node-version: [18, 19,20]
+
 
     steps:
       - name: Checkout repository
